--- a/nvidia/platform/t210/porg/kernel-dts/tegra210-porg-p3448-common.dtsi
+++ b/nvidia/platform/t210/porg/kernel-dts/tegra210-porg-p3448-common.dtsi
@@ -283,7 +283,7 @@
 	};
 
 	sdhci@700b0400 {
-		status = "disabled";
+		status = "enabled";
 		/delete-property/ keep-power-in-suspend;
 		/delete-property/ non-removable;
 		mmc-ddr-1_8v;
